[tool.poetry]
name = "tg-online-bot"
version = "0.1.0"
description = ""
authors = ["oluceps <i@oluceps.uk>"]
license = "mit"
readme = "README.md"

packages = [
    { include = "main.py" },
]

[tool.poetry.scripts]
hatoreto-rehoso = 'main:start'


[tool.poetry.dependencies]
python = "^3.11"
TgCrypto = "^1.2.5"
uvloop = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
