[tool.poetry]
name = "online-keeper"
version = "0.1.0"
description = "online keeper for telegram"
authors = ["oluceps <i@oluceps.uk>"]
license = "mit"
readme = "README.md"

packages = [
    { include = "main.py" },
]

[tool.poetry.scripts]
online-keeper = 'main:start'


[tool.poetry.dependencies]
python = "^3.11"
TgCrypto = "^1.2.5"
uvloop = "^0.19.0"
pyrogram = "^2.0.106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
